canvi de color administrator page

--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -14,7 +14,7 @@
     <h3>Nivell d'Accés:</h3>
     
     {% if user.is_superuser %}
-        <div style="background-color: #d0f906; padding: 10px; border: 1px solid rgb(246, 250, 6);">
+        <div style="background-color: #f9bc06; padding: 10px; border: 1px solid rgb(246, 250, 6);">
             <p><strong>⚠️ PANELL D'ADMINISTRADOR ⚠️</strong></p>
             <p>Tens accés total al sistema. Pots esborrar bases de dades.</p>
             <a href="/admin/">Anar al Panell de Control</a>
